# vertector-scylladbstore

./: .env.example  .gitignore  BATCH_PROCESSING_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  GITHUB_UPLOAD_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PRODUCTION_IMPLEMENTATION.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  PYPI_PUBLISH.md  QDRANT_INTEGRATION.md  QUICK_REFERENCE.md  README.md  SCYLLADB_STORE_GUIDE.md  advanced_features_examples.ipynb  benchmark_batch_operations.py  docker-compose.yml  example_scylladb_store.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scylladb_store.py  scylladb_store_with_embeddings.py  semantic_search_demo.ipynb  setup.py  stress_test_qdrant.py  test_batch_comprehensive.py  test_batch_retry.py  test_crud_ops.ipynb  test_hybrid_crud_ops.ipynb  test_hybrid_search.py  test_scylla_store.py  upload-to-vertector.sh
.archive/: PRODUCTION_READINESS.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: deployment.md  operations.md  troubleshooting.md
examples/: README.md  semantic_search_demo.ipynb  test_crud_ops.ipynb  test_langgraph_integration.ipynb  test_observability_features.ipynb
scripts/: README.md  performance_benchmark.py  performance_profiler.py
src/vertector_scylladbstore/: __init__.py  __main__.py  config.py  embeddings.py  logging_utils.py  mcp_server.py  observability.py  rate_limiter.py  store.py
tests/: conftest.py  test_config.py  test_connection.py  test_crud_operations.py  test_error_handling.py  test_production_features.py  test_rate_limiter.py  test_search.py  test_store_advanced.py  test_store_edge_cases.py  test_store_initialization.py
